Struct tokenResponse now part of pkg auth. Fix swagger comments. reGen mock
